alignment fixed

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -201,7 +201,8 @@ footer{
 
 .contact-us-tagline{
     margin-top: 6%;
-    left: -12%;
+    left: -150px;
+    font-size: 46px;
 }
 
 .contact-us-button{
@@ -212,7 +213,6 @@ footer{
 footer button{
     width: 260px;
     height: 60px;
-    font-size: 22px;
     letter-spacing: 0.16px;
     background-color: inherit;
     border: 2px solid rgba(255, 255, 255, 1);
